# journalr

./: Cargo.toml  completed.j  gg  happi  hh  jrnl.j
src/: app.rs  args.rs  date.rs  diary.rs  keybindings.rs  lib.rs  main.rs  ui.rs
