[package]
name = "journalr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["cargo", "derive", "env", "string"] }
cocoon = { version = "0.4.2", features = ["thiserror"] }
crossterm = "0.27.0"
ratatui = { version = "0.26.2"}
serde = { version = "1.0.200", features = ["std", "alloc", "serde_derive", "derive"] }
serde_json = "1.0.116"
tui-textarea = "0.4.0"
